Fixing separator showing on mobile

--- a/assets/css/admin/style.scss
+++ b/assets/css/admin/style.scss
@@ -181,7 +181,7 @@ button.edd-round:active {
 }
 
 @media screen and (max-width: 840px) {
-	.edd-header-seperator{
+	.edd-header-separator{
 		display: none;
 	}
 
